--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,23 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.6'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+//	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
+	implementation 'jakarta.validation:jakarta.validation-api:2.0.2'
+
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+	implementation 'mysql:mysql-connector-java:8.0.28'
+
+	implementation 'com.querydsl:querydsl-jpa:5.0.0'
+	implementation 'com.querydsl:querydsl-apt:5.0.0'
 }
 
 tasks.named('test') {
