--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,17 @@ repositories {
 	mavenCentral()
 }
 
+//tasks.named('compileJava') {
+//	inputs.files(tasks.named('processResources'))
+//}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.6'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.6.6'
+	implementation 'org.springframework.boot:spring-boot-starter-security:2.6.6'
+	implementation 'org.springframework.boot:spring-boot-configuration-processor:2.6.6'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -39,6 +45,8 @@ dependencies {
 
 	implementation 'com.querydsl:querydsl-jpa:5.0.0'
 	implementation 'com.querydsl:querydsl-apt:5.0.0'
+
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 }
 
 tasks.named('test') {
