--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,9 @@ dependencies {
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	implementation 'jakarta.validation:jakarta.validation-api:2.0.2'
 
-	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+//	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+
 
 	implementation 'mysql:mysql-connector-java:8.0.28'
 
