fix: real properties 추가

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,6 +1,10 @@
 spring:
-  profiles:
-    active:local
+  datasource:
+    url: jdbc:mysql://localhost:3306/whai?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+    username: y2829
+    password: Admin2829!
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
   redis:
-    host:localhost
-    port:6379
+    host: localhost
+    port: 6379
