--- a/src/main/resources/application-real.yml
+++ b/src/main/resources/application-real.yml
@@ -1,10 +1,14 @@
+server:
+  port: 8081
+  address: 0.0.0.0
+
 spring:
   datasource:
-    url: jdbc:mysql://whai.cf:3306/whai?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+    url: jdbc:mysql://54.176.111.9:3306/whai?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
     username: y2829
     password: Admin2829!
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   redis:
-    host: whai.cf
+    host: 54.176.111.9
     port: 6379
