--- a/src/main/resources/application-real.yml
+++ b/src/main/resources/application-real.yml
@@ -1,14 +1,14 @@
 server:
-  port: 8081
   address: 0.0.0.0
+  port: 8081
 
 spring:
   datasource:
-    url: jdbc:mysql://54.176.111.9:3306/whai?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+    url: jdbc:mysql://whai-mysql:3306/whai?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
     username: y2829
     password: Admin2829!
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   redis:
-    host: 54.176.111.9
+    host: whai-redis
     port: 6379
