--- a/src/main/resources/application-real.yml
+++ b/src/main/resources/application-real.yml
@@ -4,11 +4,11 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/whai?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+    url: jdbc:mysql://54.176.111.9:3306/whai?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
     username: y2829
     password: Admin2829!
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   redis:
-    host: localhost
+    host: 54.176.111.9
     port: 6379
