--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
     - name: Caching gradle
-      uses: action/cache@v3
+      uses: actions/cache@v3
       with:
         path: |
           ~/.gradle/caches
