--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: '3'
 services:
   whai-back:
-    image: heung27/whai-back
+    image: heung27/whai-back:latest
     ports:
       - '80:8081'
     platform: linux/amd64
+    environment:
+      - USE_PROFILE=real
     depends_on:
       - whai-mysql
       - whai-redis
@@ -12,7 +14,7 @@ services:
       - whai-net
 
   whai-mysql:
-    image: mysql
+    image: mysql:8.0.30
     ports:
       - '3306:3306'
     restart: always
@@ -25,7 +27,7 @@ services:
       - whai-net
 
   whai-redis:
-    image: redis
+    image: redis:alpine
     ports:
       - '6379:6379'
     restart: always
