--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,5 +93,5 @@ jobs:
     steps:
     - name: Docker run
       run: |
-        docker stop whai-back && docker rm whai-back && docker rmi heung27/whai-back:latest
+        docker stop whai-back && docker rm whai-back && docker rmi heung27/whai-back:main
         docker-compose up -d
